# OpenHAPv2

./: README.md
.github/workflows/: build-all-firmwares.yml  build.yml  firmware-build.yml  firmware_build.yml
firmware/: .gitignore  CMakeLists.txt  Dockerfile  README.md  partitions.csv  sdkconfig  sdkconfig.old
firmware/components/hardwareInterface/: gpio.cpp  i2c.cpp
firmware/components/hwInterface/: CMakeLists.txt  gpio.cpp  i2c.cpp
firmware/components/hwSubsystem_bluetooth_le/: CMakeLists.txt  eddystoneScanner.cpp
firmware/components/hwSubsystem_particulateSensor/: CMakeLists.txt  README.md  sds011.cpp
firmware/components/hwSubsystem_storage/: CMakeLists.txt  internalFlash.cpp
firmware/components/hwSubsystem_thermalFrameGrabber/: CMakeLists.txt  README.md  mlx90641.cpp
firmware/components/hwSubsystem_timekeeping/: CMakeLists.txt  ds3231.cpp
firmware/components/hwSubsystem_wifi/: CMakeLists.txt  index.html  sensors.html  upload_script.html  wifiManager.cpp
firmware/components/hwSubsystem_wifi/include/: wifiManager.hpp
firmware/components/hwSubsystem_wifi/www/: file.html  index.html  sensors.html  w3.css  wristband.html
firmware/components/swSubsystem_filesystems/: CMakeLists.txt  spiffs.cpp
firmware/components/swUtilities/: CMakeLists.txt  time.cpp
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
software/chamberTest/: README.md  chamberTest.ipynb  chamberTest.py
software/measurementNormalization/: jupyterImplementation.ipynb
software/particulateSensorNormalization/: README.md  analysis.ipynb  jupyterImplementation.ipynb
(+26 files in other folders)
